--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <p> My shit finna be here </p>
+  <div id="main_cont">
+    
+  </div>
 </body>
 </html>
