--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div id="main_cont">
-    <img id="headimg src=https://github.com/Espeer5/webDev/blob/598bceccb8ac20302516af9615318cdd1174583d/techimg.jpeg">
+  <div id=main_cont>
+    <img id=headimg src=https://github.com/Espeer5/webDev/blob/598bceccb8ac20302516af9615318cdd1174583d/techimg.jpeg>
   </div>
 </body>
 </html>
