--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
   <div id=main_cont>
-    <img id=headimg src=https://github.com/Espeer5/webDev/blob/598bceccb8ac20302516af9615318cdd1174583d/techimg.jpeg>
-  </div>
+    <img id="headimg" src="https://github.com/Espeer5/webDev/blob/af0ccca527f9d61885c7ba454a0a053adbe5ae4e/7DC9A5E7-3B4C-4E88-B1A2-C03157149DEC_1_105_c.jpeg">
 </body>
 </html>
