--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <div id=main_cont>
-    <img id="headimg" src="https://github.com/Espeer5/webDev/blob/af0ccca527f9d61885c7ba454a0a053adbe5ae4e/7DC9A5E7-3B4C-4E88-B1A2-C03157149DEC_1_105_c.jpeg">
+    <img id="headimg" src="https://github.com/Espeer5/webDev/blob/11cdea3a588bc1bdd480604e5436076288030fed/IMG_4733.JPG">
 </body>
 </html>
