--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Edward Speer's Website</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel=stylesheet type="text/css" />
 </head>
 <body>
   <div id=main_cont>
-    <img id="headimg" src="https://github.com/Espeer5/webDev/blob/11cdea3a588bc1bdd480604e5436076288030fed/IMG_4733.JPG">
+    <img id=headimg src=https://github.com/Espeer5/webDev/blob/11cdea3a588bc1bdd480604e5436076288030fed/IMG_4733.JPG>
 </body>
 </html>
