Switch image path

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <div id=main_cont>
-    <img id=headimg src=https://github.com/Espeer5/webDev/blob/11cdea3a588bc1bdd480604e5436076288030fed/IMG_4733.JPG>
+    <img id=headimg src=IMG_4733.JPG>
 </body>
 </html>
