--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
 <body>
   <div id=main_cont>
     <img id=headimg src=circ2.jpeg>
+  </div>
+  <canvas id=menucan class="dropbtn" width=20 height=20>Menu</canvas>
+      <script src="script.js"></script>
+        <div class="dropdown-content">
+          <a href="#">Home</a>
+          <a href="#">Landscaping</a>
+          <a href="#">Shop Online</a>
+        </div>
+      </div>
+    <h1 id=title>My name and fucking shit like that</h1>
 </body>
 </html>
