--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id=main_cont>
     <img id=headimg src=circ2.jpeg>
- <div id="header>">
+ <div class="dropdown">
   <canvas id=menucan class="dropbtn" width=20 height=20>Menu</canvas>
       <script src="script.js"></script>
         <div class="dropdown-content">
