--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     </div>
     <div id="pages">
       <a href="home.html"> Home</a>
-      <a href="resume.html"> Resume</a>
+      <a href="/Pages/resume.html"> Resume</a>
     </div>
     <div id="contact">
       <div id="icons">
