--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h2> Undergraduate Student at Caltech</h2>
     </div>
     <div id="pages">
-      <a href="home.html"> Home</a>
+      <a href="index.html"> Home</a>
       <a href="/Pages/resume.html"> Resume</a>
     </div>
     <div id="contact">
