--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Edward Speer</title>
-  <link href="../Stylesheets/basic.css" rel=stylesheet type="text/css" />
-  <link href="../Stylesheets/home.css" rel="stylesheet" type="text/css" />
+  <link href="/Stylesheets/basic.css" rel=stylesheet type="text/css" />
+  <link href="/Stylesheets/home.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -21,9 +21,9 @@
     </div>
     <div id="contact">
       <div id="icons">
-        <img id="pin" src = ../Images/Picture1.svg>
-        <img id="phone" src = ../Images/Picture2.svg>
-        <img id="mail" src = ../Images/Picture3.svg>
+        <img id="pin" src = /Images/Picture1.svg>
+        <img id="phone" src = /Images/Picture2.svg>
+        <img id="mail" src = /Images/Picture3.svg>
       </div>
       <div id="info">
         <h3>Pasadena CA</h3>
@@ -33,10 +33,10 @@
     </div>
   </div>
   <div id="right_bar">
-    <img id="CPU1" src="../Images/CPU1.png">
+    <img id="CPU1" src="/Images/CPU1.png">
   </div>
   <div id="me_accent"></div>
-  <img id="me" src="../Images/me.jpeg">
+  <img id="me" src="/Images/me.jpeg">
   <div id="greet">
     <h2 id="hi">Welcome!</h2>
     <p>Great to meet you.</p>
@@ -51,5 +51,5 @@
     </p>
     <p> Reach out! Let's connect and see what we can build together.</p>
   </div>
-  <img id="sig" src="../Images/sig.png">
+  <img id="sig" src="/Images/sig.png">
 </body>
