--- a/basic.html
+++ b/basic.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Edward Speer</title>
-  <link href="../Stylesheets/basic.css" rel=stylesheet type="text/css" />
-  <link href="../Stylesheets/resume.css" rel=stylesheet type="text/css" />
+  <link href="basic.css" rel=stylesheet type="text/css" />
 </head>
 
 <body>
@@ -16,14 +15,14 @@
       <h2> Undergraduate Student at Caltech</h2>
     </div>
     <div id="pages">
-      <a href="index.html"> Home</a>
+      <a href="home.html"> Home</a>
       <a href="resume.html"> Resume</a>
     </div>
     <div id="contact">
       <div id="icons">
-        <img id="pin" src = ../Images/Picture1.svg>
-        <img id="phone" src = ../Images/Picture2.svg>
-        <img id="mail" src = ../Images/Picture3.svg>
+        <img id="pin" src = Picture1.svg>
+        <img id="phone" src = Picture2.svg>
+        <img id="mail" src = Picture3.svg>
       </div>
       <div id="info">
         <h3>Pasadena CA</h3>
@@ -32,8 +31,8 @@
       </div>
     </div>
   </div>
-  <a id="D_Resume" href="../Files/Speer_Resume.pdf" download>Download My Resume</a>
-  <div id="res_holder">
-    <img id="res" src="../Images/Res.png">
+  <div id="right_bar">
+    <img id="CPU1" src="CPU1.png">
   </div>
+
 </body>
