--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Edward Speer</title>
-  <link href="../stylesheets/basic.css" rel=stylesheet type="text/css" />
+  <link href="basic.css" rel=stylesheet type="text/css" />
+  <link href="resume.css" rel=stylesheet type="text/css" />
 </head>
 
 <body>
@@ -15,14 +16,14 @@
       <h2> Undergraduate Student at Caltech</h2>
     </div>
     <div id="pages">
-      <a href="home.html"> Home</a>
-      <a href="/pages/resume.html"> Resume</a>
+      <a href="index.html"> Home</a>
+      <a href="resume.html"> Resume</a>
     </div>
     <div id="contact">
       <div id="icons">
-        <img id="pin" src = ../Images/Picture1.svg>
-        <img id="phone" src = ../Images/Picture2.svg>
-        <img id="mail" src = ../Images/Picture3.svg>
+        <img id="pin" src = Picture1.svg>
+        <img id="phone" src = Picture2.svg>
+        <img id="mail" src = Picture3.svg>
       </div>
       <div id="info">
         <h3>Pasadena CA</h3>
@@ -31,8 +32,8 @@
       </div>
     </div>
   </div>
-  <div id="right_bar">
-    <img id="CPU1" src="../Images/CPU1.png">
+  <a id="D_Resume" href="Speer_Resume.pdf" download>Download My Resume</a>
+  <div id="res_holder">
+    <img id="res" src="Res.png">
   </div>
-
 </body>
