--- a/index.html
+++ b/index.html
@@ -36,21 +36,29 @@
   <div id="right_bar">
     <img id="CPU1" src="CPU1.png">
   </div>
-  <div id="me_accent"></div>
-  <img id="me" src="me.jpeg">
-  <div id="greet">
-    <h2 id="hi">Welcome!</h2>
-    <p>Great to meet you.</p>
-    <p>My name is Edward Speer and I am an undergraduate student
-      at the California Institute of Technology studying computer
-      science. My journey is all about people, and the solutions we
-      can build when we work together.</p>
-    <p>My passion as an emerging software engineer is architecting
-      accessible solutions that make tangible change to real problems.
-      I believe that good ideas meeting with great design, development, and service
-      leads to software that changes lives.
-    </p>
-    <p> Reach out! Let's connect and see what we can build together.</p>
-  </div>
-  <img id="sig" src="sig.png">
+  <table id="main">
+    <tr>
+      <th>
+        <div id="me_accent"></div>
+        <img id="me" src="me.jpeg">
+      </th>
+      <th>
+        <div id="greet">
+          <h2 id="hi">Welcome!</h2>
+          <p>Great to meet you.</p>
+          <p>My name is Edward Speer and I am an undergraduate student
+            at the California Institute of Technology studying computer
+            science. My journey is all about people, and the solutions we
+            can build when we work together.</p>
+          <p>My passion as an emerging software engineer is architecting
+            accessible solutions that make tangible change to real problems.
+            I believe that good ideas meeting with great design, development, and service
+            leads to software that changes lives.
+          </p>
+          <p> Reach out! Let's connect and see what we can build together.</p>
+        </div>
+        <img id="sig" src="sig.png">
+      </th>
+    </tr>
+  </table>
 </body>
