--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
   <div id="right_bar">
     <img id="CPU1" src="CPU1.png">
   </div>
-  <div id="me_accent"></div>
-  <img id="me" src="me.jpeg">
+  <img id="me" src="me.PNG">
   <div id="greet">
     <h2 id="hi">Welcome!</h2>
     <p>Great to meet you.</p>
