--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
   <table id="main">
     <tr>
       <th>
-        <div id="me_accent"></div>
-        <img id="me" src="me.jpeg">
+        <img id="me" src="me.PNG">
       </th>
       <th>
         <div id="greet">
