--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div id="pages">
       <a href="index.html"> Home</a>
       <a href="resume.html"> Resume</a>
+      <a href="blog_frame.html">Article</a>
     </div>
     <div id="contact">
       <div id="icons">
