--- a/summer_intern.html
+++ b/summer_intern.html
@@ -37,8 +37,9 @@
   </div>
   <div class="article">
     <h1 class="art_title">An Internship with Texas Department of Transportation</h1>
-    <h2 class='article_sub">Developing knowledge of agile project management and how
-    it interfaces with the ITIL framework to enable great IT work.</h2>
+    <h2 class="article_sub>
+               Developing knowledge of agile project management and how it interfaces with the ITIL framework to enable great IT work.
+    </h2>
     <p>When I started looking for a Summer internship for 2022, I didn't know what I
     was looking for.  As I work towards my goal of creating great software, I am 
     keenly aware that programming is far from the only skill required. Before work 
