--- a/summer_intern.html
+++ b/summer_intern.html
@@ -51,6 +51,31 @@
     around software. A need to explore software production at a higher level made a project management
     internship at Texas Department of Transportation the ideal choice for my professional internship
     in 2022.</p>
+    <h2 class="article_sub">What did I do?</h2>
+    <p>  In my internship at TxDOT, I acted as a project manager at the portfolio level and at the project
+      level, gaining experience as both a technical project manager and at a higher level. My daily 
+      activities consisted of running project status meetings, creating requirements documents, analyzing 
+      project metrics and creating leadership reports, and building dashboards from the project portfolio database.
+      I was involved with a variety of teams across a large IT organization, and got to forge working relationships 
+      with people who had so much to teach me.
+     The most unique aspect about working for TxDOT was the keen awareness that none of us were working for the bottom
+      line; we were working for the people of the state Texas. Every project I worked on was providing benefit to a 
+      user somewhere in the state, and every coworker I worked with understood that what we did each day was part of 
+      an ongoing effort to ensure that every user of our transportation system made it home to their loved ones happy 
+      and healthy. This meant that in everything I did, my user was the priority. For example, when I designed and produced 
+      dashboards from the projects database, my user was ITD leadership, and my goal had to be giving our leaders the quickest, 
+      easiest to navigate view of the metrics so that they could quickly view the dashboard and easily understand where we 
+      were, so that they could focus on where we were going. The better my dashboard was, the quicker they could get the data
+      they needed, and the faster they could focus on architecting a safer, better future for the state of Texas.
+     Through the variety of teams I was involved in, I got to experience a variety of roles. As a technical PM, 
+      I facilitated meetings and directly baselined and implemented agile and hybrid project schedules. As a team
+      lead on an intern project, I set the direction, coordinated with other teams, and led workshops within my 
+      team to develop ideas into designs. As a reporter and dashboard developer, I received requirements documents
+      and created templates and demos for review, received commentary, and put prototypes into production. No matter
+      which hat I was wearing on a particular team, I learned how to maneuver and communicate within an ITIL driven 
+      environment effectively. This breadth of experience was the best part of working at TxDOT, where I worked every
+      day on real problems and got to make a real impact on real products.
+    </p?
   </div>
 
 </body>
