--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Edward Speer</title>
   <link href="basic.css" rel=stylesheet type="text/css" />
   <link href="home.css" rel="stylesheet" type="text/css" />
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="icon.ico">
 </head>
 
 <body>
