--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="pages">
       <a href="index.html"> Home</a>
       <a href="resume.html"> Resume</a>
-      <a href="summer_intern.html">Summer Internship</a>
+      <a href="art_links.html">Articles</a>
     </div>
     <div id="contact">
       <div id="icons">
