--- a/art_links.html
+++ b/art_links.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Edward Speer</title>
-  <link rel="icon" href="icon.ico">
   <link href="basic.css" rel=stylesheet type="text/css" />
+  <link href="links.css" rel=stylesheet type="text/css" />
+  <link rel="icon" href="icon.ico">
 </head>
 
 <body>
@@ -36,5 +37,25 @@
   <div id="right_bar">
     <img id="CPU1" src="CPU1.png">
   </div>
-
+  <table id="links_tab">
+    <tr>
+      <th>
+        <a href="summer_intern.html" class="art_link">
+          <img class="link_img" src="TxDOTFM1140.jpg">
+          <div class="link_name">Interning at TxDOT</div>
+          <div class="link_accent"></div>
+          <p class="description">Developing knowledge of agile project management and how it interfaces with the ITIL framework to enable great IT work.
+          </h2></p>
+        </a>
+      </th>
+      <th>
+        <a class="art_link">
+          <img class="link_img" src="sig.png">
+          <div class="link_name">An idiot</div>
+          <div class="link_accent"></div>
+        </a>
+      </th>
+      <th>
+      </th>
+  </table>
 </body>
