--- a/mystory.html
+++ b/mystory.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Edward Speer</title>
   <link href="../stylesheets/basic.css" rel=stylesheet type="text/css" />
+  <link rel="icon" href="icon.ico">
 </head>
 
 <body>
@@ -17,6 +18,7 @@
     <div id="pages">
       <a href="home.html"> Home</a>
       <a href="resume.html"> Resume</a>
+      <a href="art_links.html">Articles</a>
     </div>
     <div id="contact">
       <div id="icons">
