--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
   <title>Edward Speer</title>
   <link href="basic.css" rel=stylesheet type="text/css" />
   <link href="resume.css" rel=stylesheet type="text/css" />
+  <link rel="icon" href="icon.ico">
 </head>
 
 <body>
@@ -18,6 +19,7 @@
     <div id="pages">
       <a href="index.html"> Home</a>
       <a href="resume.html"> Resume</a>
+      <a href="art_links.html">Articles</a>
     </div>
     <div id="contact">
       <div id="icons">
