--- a/summer_intern.html
+++ b/summer_intern.html
@@ -6,6 +6,7 @@
   <title>A Summer at Texas Department of Transportation</title>
   <link href="basic.css" rel=stylesheet type="text/css" />
   <link href="article.css" rel=stylesheet type="text/css" />
+  <link rel="icon" href="icon.ico">
 </head>
 
 <body>
@@ -18,6 +19,7 @@
     <div id="pages">
       <a href="index.html"> Home</a>
       <a href="resume.html"> Resume</a>
+      <a href="art_links.html">Articles</a>
     </div>
     <div id="contact">
       <div id="icons">
@@ -41,7 +43,7 @@
                Developing knowledge of agile project management and how it interfaces with the ITIL framework to enable great IT work.
     </h2>
     <img src="TxDOTFM1140.jpg" class="art_head">
-    <p>When I started looking for a Summer internship for 2022, I didn't know what I
+    <p class="art_text">When I started looking for a Summer internship for 2022, I didn't know what I
     was looking for.  As I work towards my goal of creating great software, I am 
     keenly aware that programming is far from the only skill required. Before work 
     ever lands into the hands of a developer, a huge amount of research and design 
@@ -52,13 +54,13 @@
     internship at Texas Department of Transportation the ideal choice for my professional internship
     in 2022.</p>
     <h2 class="article_sub">What did I do?</h2>
-    <p>  In my internship at TxDOT, I acted as a project manager at the portfolio level and at the project
+    <p class="art_text">  In my internship at TxDOT, I acted as a project manager at the portfolio level and at the project
       level, gaining experience as both a technical project manager and at a higher level. My daily 
       activities consisted of running project status meetings, creating requirements documents, analyzing 
       project metrics and creating leadership reports, and building dashboards from the project portfolio database.
       I was involved with a variety of teams across a large IT organization, and got to forge working relationships 
-      with people who had so much to teach me.
-     The most unique aspect about working for TxDOT was the keen awareness that none of us were working for the bottom
+      with people who had so much to teach me. </p>
+    <p class="art_text"> The most unique aspect about working for TxDOT was the keen awareness that none of us were working for the bottom
       line; we were working for the people of the state Texas. Every project I worked on was providing benefit to a 
       user somewhere in the state, and every coworker I worked with understood that what we did each day was part of 
       an ongoing effort to ensure that every user of our transportation system made it home to their loved ones happy 
@@ -66,8 +68,8 @@
       dashboards from the projects database, my user was ITD leadership, and my goal had to be giving our leaders the quickest, 
       easiest to navigate view of the metrics so that they could quickly view the dashboard and easily understand where we 
       were, so that they could focus on where we were going. The better my dashboard was, the quicker they could get the data
-      they needed, and the faster they could focus on architecting a safer, better future for the state of Texas.
-     Through the variety of teams I was involved in, I got to experience a variety of roles. As a technical PM, 
+      they needed, and the faster they could focus on architecting a safer, better future for the state of Texas.</p>
+    <p class="art_text"> Through the variety of teams I was involved in, I got to experience a variety of roles. As a technical PM, 
       I facilitated meetings and directly baselined and implemented agile and hybrid project schedules. As a team
       lead on an intern project, I set the direction, coordinated with other teams, and led workshops within my 
       team to develop ideas into designs. As a reporter and dashboard developer, I received requirements documents
@@ -75,7 +77,7 @@
       which hat I was wearing on a particular team, I learned how to maneuver and communicate within an ITIL driven 
       environment effectively. This breadth of experience was the best part of working at TxDOT, where I worked every
       day on real problems and got to make a real impact on real products.
-    </p?
+      </p>
   </div>
 
 </body>
