--- a/art_links.html
+++ b/art_links.html
@@ -43,7 +43,6 @@
         <a href="summer_intern.html" class="art_link">
           <img class="link_img" src="TxDOTFM1140.jpg">
           <div class="link_name">Interning at TxDOT</div>
-          <div class="link_accent"></div>
           <p class="description">Developing knowledge of agile project management and how it interfaces with the ITIL framework to enable great IT work.
           </h2></p>
         </a>
@@ -52,10 +51,16 @@
         <a class="art_link">
           <img class="link_img" src="sig.png">
           <div class="link_name">An idiot</div>
-          <div class="link_accent"></div>
+          <p class="description">Edward Speer is really dumb and should be hanged as soon as possible.</p>
         </a>
       </th>
       <th>
+        <a href="summer_intern.html" class="art_link">
+          <img class="link_img" src="TxDOTFM1140.jpg">
+          <div class="link_name">Interning at TxDOT</div>
+          <p class="description">Developing knowledge of agile project management and how it interfaces with the ITIL framework to enable great IT work.
+          </h2></p>
+        </a>
       </th>
   </table>
 </body>
