--- a/art_links.html
+++ b/art_links.html
@@ -10,6 +10,36 @@
 </head>
 
 <body>
+  <div id="right_bar">
+    <img id="CPU1" src="CPU1.png">
+  </div>
+  <table id="links_tab">
+    <tr>
+      <th>
+        <a href="summer_intern.html" class="art_link">
+          <img class="link_img" src="TxDOTFM1140.jpg">
+          <div class="link_name">Interning at TxDOT</div>
+          <p class="description">Developing knowledge of agile project management and how it interfaces with the ITIL framework to enable great IT work</p>
+          <p class="description">8/12/22</p>
+        </a>
+      </th>
+      <th>
+        <a class="art_link">
+          <img class="link_img" src="sig.png">
+          <div class="link_name">An idiot</div>
+          <p class="description">Edward Speer is really dumb and should be hanged as soon as possible.</p>
+          <p class="description">1/13/03</p>
+        </a>
+      </th>
+      <th>
+        <a href="summer_intern.html" class="art_link">
+          <img class="link_img" src="TxDOTFM1140.jpg">
+          <div class="link_name">Interning at TxDOT</div>
+          <p class="description">Developing knowledge of agile project management and how it interfaces with the ITIL framework to enable great IT work.</p>
+          <p class="description">8/12/22</p>
+        </a>
+      </th>
+  </table>
   <div id="top_accent"></div>
   <div id="top_bar">
     <div id="title">
@@ -34,33 +64,4 @@
       </div>
     </div>
   </div>
-  <div id="right_bar">
-    <img id="CPU1" src="CPU1.png">
-  </div>
-  <table id="links_tab">
-    <tr>
-      <th>
-        <a href="summer_intern.html" class="art_link">
-          <img class="link_img" src="TxDOTFM1140.jpg">
-          <div class="link_name">Interning at TxDOT</div>
-          <p class="description">Developing knowledge of agile project management and how it interfaces with the ITIL framework to enable great IT work.
-          </h2></p>
-        </a>
-      </th>
-      <th>
-        <a class="art_link">
-          <img class="link_img" src="sig.png">
-          <div class="link_name">An idiot</div>
-          <p class="description">Edward Speer is really dumb and should be hanged as soon as possible.</p>
-        </a>
-      </th>
-      <th>
-        <a href="summer_intern.html" class="art_link">
-          <img class="link_img" src="TxDOTFM1140.jpg">
-          <div class="link_name">Interning at TxDOT</div>
-          <p class="description">Developing knowledge of agile project management and how it interfaces with the ITIL framework to enable great IT work.
-          </h2></p>
-        </a>
-      </th>
-  </table>
 </body>
