--- a/summer_intern.html
+++ b/summer_intern.html
@@ -10,30 +10,6 @@
 </head>
 
 <body>
-  <div id="top_accent"></div>
-  <div id="top_bar">
-    <div id="title">
-      <h1>Edward Speer</h1>
-      <h2> Undergraduate Student at Caltech</h2>
-    </div>
-    <div id="pages">
-      <a href="index.html"> Home</a>
-      <a href="resume.html"> Resume</a>
-      <a href="art_links.html">Articles</a>
-    </div>
-    <div id="contact">
-      <div id="icons">
-        <img id="pin" src = Picture1.svg>
-        <img id="phone" src = Picture2.svg>
-        <img id="mail" src = Picture3.svg>
-      </div>
-      <div id="info">
-        <h3>Pasadena CA</h3>
-        <h3>(512)375-5674</h3>
-        <h3>espeer@caltech.edu</h3>
-      </div>
-    </div>
-  </div>
   <div id="right_bar">
     <img id="CPU1" src="CPU1.png">
   </div>
@@ -42,6 +18,7 @@
     <h2 class="article_sub">
                Developing knowledge of agile project management and how it interfaces with the ITIL framework to enable great IT work.
     </h2>
+    <h2 class="article_sub">8/12/22</h2>
     <img src="TxDOTFM1140.jpg" class="art_head">
     <p class="art_text">When I started looking for a Summer internship for 2022, I didn't know what I
     was looking for.  As I work towards my goal of creating great software, I am 
@@ -78,6 +55,30 @@
       environment effectively. This breadth of experience was the best part of working at TxDOT, where I worked every
       day on real problems and got to make a real impact on real products.
       </p>
+  </div>
+  <div id="top_accent"></div>
+  <div id="top_bar">
+    <div id="title">
+      <h1>Edward Speer</h1>
+      <h2> Undergraduate Student at Caltech</h2>
+    </div>
+    <div id="pages">
+      <a href="index.html"> Home</a>
+      <a href="resume.html"> Resume</a>
+      <a href="art_links.html">Articles</a>
+    </div>
+    <div id="contact">
+      <div id="icons">
+        <img id="pin" src = Picture1.svg>
+        <img id="phone" src = Picture2.svg>
+        <img id="mail" src = Picture3.svg>
+      </div>
+      <div id="info">
+        <h3>Pasadena CA</h3>
+        <h3>(512)375-5674</h3>
+        <h3>espeer@caltech.edu</h3>
+      </div>
+    </div>
   </div>
 
 </body>
