--- a/art_links.html
+++ b/art_links.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Edward Speer</title>
+  <title>Edward Speer|Articles</title>
   <link href="basic.css" rel=stylesheet type="text/css" />
   <link href="links.css" rel=stylesheet type="text/css" />
   <link rel="icon" href="icon.ico">
