--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
-  <title>Edward Speer</title>
+  <title>Edward Speer|Home</title>
   <link href="basic.css" rel=stylesheet type="text/css" />
   <link href="home.css" rel="stylesheet" type="text/css" />
   <link rel="icon" href="icon.ico">
