--- a/art_links.html
+++ b/art_links.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Edward Speer|Articles</title>
+  <title>Edward Speer | Articles</title>
   <link href="basic.css" rel=stylesheet type="text/css" />
   <link href="links.css" rel=stylesheet type="text/css" />
   <link rel="icon" href="icon.ico">
@@ -20,24 +20,12 @@
           <img class="link_img" src="TxDOTFM1140.jpg">
           <div class="link_name">Interning at TxDOT</div>
           <p class="description">Developing knowledge of agile project management and how it interfaces with the ITIL framework to enable great IT work</p>
-          <p class="description">8/12/22</p>
+          <p class="date">8/12/22</p>
         </a>
       </th>
       <th>
-        <a class="art_link">
-          <img class="link_img" src="sig.png">
-          <div class="link_name">An idiot</div>
-          <p class="description">Edward Speer is really dumb and should be hanged as soon as possible.</p>
-          <p class="description">1/13/03</p>
-        </a>
       </th>
       <th>
-        <a href="summer_intern.html" class="art_link">
-          <img class="link_img" src="TxDOTFM1140.jpg">
-          <div class="link_name">Interning at TxDOT</div>
-          <p class="description">Developing knowledge of agile project management and how it interfaces with the ITIL framework to enable great IT work.</p>
-          <p class="description">8/12/22</p>
-        </a>
       </th>
   </table>
   <div id="top_accent"></div>
