--- a/index.html
+++ b/index.html
@@ -63,4 +63,30 @@
       </th>
     </tr>
   </table>
+  <table id="mobile">
+    <tr id="pic">
+      <th>
+        <img id="me" src="me.PNG">
+      </th>
+    </tr>
+    <tr id="text">
+      <th>
+        <div id="greet">
+          <h2 id="hi">Welcome!</h2>
+          <p>Great to meet you.</p>
+          <p>My name is Edward Speer and I am an undergraduate student
+            at the California Institute of Technology studying computer
+            science. My journey is all about people, and the solutions we
+            can build when we work together.</p>
+          <p>My passion as an emerging software engineer is architecting
+            accessible solutions that make tangible change to real problems.
+            I believe that good ideas meeting with great design, development, and service
+            leads to software that changes lives.
+          </p>
+          <p> Reach out! Let's connect and see what we can build together.</p>
+        </div>
+        <img id="sig" src="sig.png">
+      </th>
+    </tr>
+  </table>
 </body>
