--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Edward Speer | Resume</title>
   <link href="basic.css" rel=stylesheet type="text/css" />
   <link href="resume.css" rel=stylesheet type="text/css" />
