--- a/summer_intern.html
+++ b/summer_intern.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A Summer at Texas Department of Transportation</title>
   <link href="basic.css" rel=stylesheet type="text/css" />
   <link href="article.css" rel=stylesheet type="text/css" />
