--- a/summer_intern.html
+++ b/summer_intern.html
@@ -55,7 +55,46 @@
       which hat I was wearing on a particular team, I learned how to maneuver and communicate within an ITIL driven 
       environment effectively. This breadth of experience was the best part of working at TxDOT, where I worked every
       day on real problems and got to make a real impact on real products.
-      </p>
+    </p>
+    <h2 class="article_sub">What did I learn?</h2>
+    <p class="art_text">Before I took on this internship, I could definitely receive a requirements document, draft up 
+      a solution, and produce it. If given access to a user to interview, I could run a workshop culminating in the 
+      requirements document for the user. If I needed to design and create a solution for a user in a small group of 
+      people, I could do that. However, I had no idea at all how this could work across a large, dispersed team, taking
+      on a large, long-term project. The frameworks I got to work within in the environment of a large IT organization 
+      taught me how to find the people, answers, and data I needed, and not to be shy about bringing ideas or problems 
+      to the table. It is already clear to me that in my career this foundational understanding and capability will be
+      used time and time again to drive creation and continuous improvement of good ideas if they are to become great 
+      products.
+    </p>
+    <h2 class="article_sub">Let me tell a story...</h2>
+    <p class="art_text"> One Wednesday morning in August after I had been at TxDOT for a couple months, I came into 
+      our beautiful new Stassney campus and sat at my desk as I always did. I started working on my big Wednesday 
+      task for every week, which was authoring a weekly project delivery metrics summary to be issued to ITD leadership 
+      at the end of the day. I logged into the database, accessed the dashboards that I had built, contacted some of the 
+      project managers, and dug through the project records for the information I needed. My supervisor came in and said
+      good morning, and asked me to look over some draft deliverables that had been uploaded by one of our service 
+      providers. I checked through these, identified some errors in the language of the document and passed them along
+      to the Compliance team to be edited. And then it hit me; It was 9 AM, and I had already contacted 9 different people
+      across different parts of our organization comfortably, with no question or doubt about who to go to or how to find
+      the information I needed.
+    </p>
+    <p class="art_text"> While this is something I had begun to take for granted, it was a shocking turnaround from where
+      I had been at the beginning of the Summer. I had been plagued in the first month of my internship with constantly 
+      searching for the resources, people, and information I needed. Yet now it was simple, I knew where I was going 
+      and could get there with confidence. While every organization is different, I know that this internship gave me
+      a toolkit for understanding and maneuvering within a complex corporate environment, and that this will play a 
+      huge role in my future.
+    </p>
+    <h2 class'"article_sub">What's Next?</h2>
+    <p class="art_text">This internship taught me a lot about maneuvering within a large organization centered around
+      software solutions. As I continue developing the technical skills I need through my classwork, I will seek out 
+      my next internship opportunity as an opportunity to get experience building something. Understanding the business
+      needs and business structure will empower me to understand how and why to build software, and I will seek out a 
+      position where I can apply both the technical skills I'm learning in school and the understanding I gained through
+      this internship to help build something. I know it will be this merging of all the skills I have been building that
+      will lead me to where I want to be.
+    </p>
   </div>
   <div id="top_accent"></div>
   <div id="top_bar">
