--- a/summer_intern.html
+++ b/summer_intern.html
@@ -86,7 +86,7 @@
       a toolkit for understanding and maneuvering within a complex corporate environment, and that this will play a 
       huge role in my future.
     </p>
-    <h2 class'"article_sub">What's Next?</h2>
+    <h2 class="article_sub">What's Next?</h2>
     <p class="art_text">This internship taught me a lot about maneuvering within a large organization centered around
       software solutions. As I continue developing the technical skills I need through my classwork, I will seek out 
       my next internship opportunity as an opportunity to get experience building something. Understanding the business
