--- a/summer_intern.html
+++ b/summer_intern.html
@@ -21,6 +21,7 @@
     </h2>
     <h2 class="article_sub">8/12/22</h2>
     <img src="TxDOTFM1140.jpg" class="art_head">
+    <p class="cite_img">txdot.gov</p>
     <p class="art_text">When I started looking for a Summer internship for 2022, I didn't know what I
     was looking for.  As I work towards my goal of creating great software, I am 
     keenly aware that programming is far from the only skill required. Before work 
