--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Edward Speer is a Caltech Computer Science Student and a developing software architect searching for internships and jobs as he goes through his undergraduate education.">
   <meta name="robots" content="index, follow">
+  <meta name="author" content="Edward Speer">
+  <meta name="keywords" content="Software, Student, Undergraduate, Caltech, Edward, Design, Intern, Internship, Technology, computer science, computer, programming, engineer, developer, professional, resume">
   <title>Edward Speer | Home</title>
   <link href="basic.css" rel=stylesheet type="text/css" />
   <link href="home.css" rel="stylesheet" type="text/css" />
