--- a/summer_intern.html
+++ b/summer_intern.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="This article tells about what it's like to be a Summer IT intern at the Texas Department of Transportation and how it teaches Agile and the ITIL framework.">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Edward Speer">
+  <meta name="keywords" content="Software, Student, Undergraduate, Caltech, Edward, Design, Intern, Internship, Technology, computer science, computer, programming, engineer, texas, transportation, TxDOT">
   <title>A Summer at Texas Department of Transportation</title>
   <link href="basic.css" rel=stylesheet type="text/css" />
   <link href="article.css" rel=stylesheet type="text/css" />
