--- a/art_links.html
+++ b/art_links.html
@@ -7,7 +7,7 @@
    <meta name="description" content="Articles written by Edward Speer, who is a Caltech Computer Science Student and a developing software architect searching for internships and jobs as he goes through his undergraduate education.">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Edward Speer">
-  <meta name="keywords" content="Software, Student, Undergraduate, Caltech, Edward, Design, Intern, Internship, Technology, computer science, computer, programming, engineer,
+  <meta name="keywords" content="Software, Student, Undergraduate, Caltech, Edward, Design, Intern, Internship, Technology, computer science, computer, programming, engineer">
   <title>Edward Speer | Articles</title>
   <link href="basic.css" rel=stylesheet type="text/css" />
   <link href="links.css" rel=stylesheet type="text/css" />
