--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Edward Speer is a Caltech Computer Science Student and a developing software architect searching for internships and jobs as he goes through his undergraduate education, and this page contains his resume.">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Edward Speer">
-  <meta name="keywords" content="Software, Student, Undergraduate, Caltech, Edward, Design, Intern, Internship, Technology, computer science, computer, programming, engineer,
+  <meta name="keywords" content="Software, Student, Undergraduate, Caltech, Edward, Design, Intern, Internship, Technology, computer science, computer, programming, engineer, professional, resume">
   <title>Edward Speer | Resume</title>
   <link href="basic.css" rel=stylesheet type="text/css" />
   <link href="resume.css" rel=stylesheet type="text/css" />
