--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <table id="main">
     <tr>
       <th>
-        <img id="me" src="me.PNG">
+        <img id="me" src="me.jpeg">
       </th>
       <th>
         <div id="greet">
