--- a/index.html
+++ b/index.html
@@ -11,73 +11,51 @@
   <title>Edward Speer | Home</title>
   <link href="basic.css" rel=stylesheet type="text/css" />
   <link href="home.css" rel="stylesheet" type="text/css" />
+  <link href="home_text.js"/>
   <link rel="icon" href="icon.ico">
 </head>
 
 <body>
-  <div id="right_bar">
-    <img id="CPU1" src="CPU1.png">
-  </div>
-  <table id="main">
+<div class=strs id="str"></div>
+  <div class=strs id="str2"></div>
+  <table id="home_main">
     <tr>
-      <th>
-        <img id="me" src="me.jpeg">
-      </th>
-      <th>
-        <div id="greet">
-          <h2 id="hi">Welcome!</h2>
-          <p>Great to meet you.</p>
-          <p>My name is Edward Speer and I am an undergraduate student
-            at the California Institute of Technology studying computer
-            science. My journey is all about people, and the solutions we
-            can build when we work together.</p>
-          <p>My passion as an emerging software engineer is architecting
-            accessible solutions that make tangible change to real problems.
-            I believe that good ideas meeting with great design, development, and service
-            leads to software that changes lives.
-          </p>
-          <p> Reach out! Let's connect and see what we can build together.</p>
-        </div>
-        <img id="sig" src="sig.png">
-      </th>
+        <th id="th">
+            <div id="me_frame"><img src="me.jpg" id="me"></div>
+        </th>
+        <th id="class">
+            <p class="home_p">class Edward_Speer:<br> 
+                &emsp; pronouns = ['he', 'him', 'his']<br>
+                &emsp; origin = "Austin, Tx"<br>
+                &emsp; age = 20<br>
+                &emsp; university = "Caltech"<br>
+                &emsp; degree_plan = ("B.S in Computer Science", "June 2025")<br>
+                &emsp; interests = ["Firmware/Software Engineering",
+                <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                "Software Design",
+                <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                "Robotics and Mechatronics",
+                <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                "Control Systems",
+                <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                "Embedded Systems"]<br>
+                &emsp; hobbies = {"sports": ["College Baseball"],
+                <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                "Instruments": ["Guitar", "Piano", "Bass"]}<br>
+            </p>
+        </th>
     </tr>
   </table>
-  <table id="mobile">
-    <tr id="pic">
-      <th>
-        <img id="me" src="me.PNG">
-      </th>
-    </tr>
-    <tr id="text">
-      <th>
-        <div id="greet">
-          <h2 id="hi">Welcome!</h2>
-          <p>Great to meet you.</p>
-          <p>My name is Edward Speer and I am an undergraduate student
-            at the California Institute of Technology studying computer
-            science. My journey is all about people, and the solutions we
-            can build when we work together.</p>
-          <p>My passion as an emerging software engineer is architecting
-            accessible solutions that make tangible change to real problems.
-            I believe that good ideas meeting with great design, development, and service
-            leads to software that changes lives.
-          </p>
-          <p> Reach out! Let's connect and see what we can build together.</p>
-        </div>
-        <img id="sig" src="sig.png">
-      </th>
-    </tr>
-  </table>
+  <script src="hello_world.js"></script>
   <div id="top_accent"></div>
   <div id="top_bar">
     <div id="title">
       <h1>Edward Speer</h1>
-      <h2> Undergraduate Student at Caltech</h2>
+      <h2> Computer Science Student at Caltech</h2>
     </div>
     <div id="pages">
       <a href="index.html"> Home</a>
       <a href="resume.html"> Resume</a>
-      <a href="art_links.html">Articles</a>
     </div>
     <div id="contact">
       <div id="icons">
