--- a/resume.html
+++ b/resume.html
@@ -16,9 +16,9 @@
 
 <body>
   </div>
-  <a id="D_Resume" href="Speer_Resume.pdf" download>Download My Resume</a>
+  <a id="D_Resume" href="Speer_Resume_12.27.pdf" download>Download My Resume</a>
   <div id="res_holder">
-    <img id="res" src="resume.png">
+    <img id="res" src="Speer_Resume.png">
   </div>
   <div id="top_accent"></div>
   <div id="top_bar">
@@ -29,7 +29,6 @@
     <div id="pages">
       <a href="index.html"> Home</a>
       <a href="resume.html"> Resume</a>
-      <a href="art_links.html">Articles</a>
     </div>
     <div id="contact">
       <div id="icons">
