--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Edward Speer is a Caltech Computer Science Student and a developing software architect searching for internships and jobs as he goes through his undergraduate education.">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Edward Speer">
-  <meta name="keywords" content="Software, Student, Undergraduate, Caltech, Edward, Design, Intern, Internship, Technology, computer science, computer, programming, engineer, developer, professional, resume">
+  <meta name="keywords" content="Software, Student, Undergraduate, Caltech, Design, Intern, Internship, Technology, computer science, computer, programming, engineer, developer, professional, resume">
   <title>Edward Speer | Home</title>
   <link href="basic.css" rel=stylesheet type="text/css" />
   <link href="home.css" rel="stylesheet" type="text/css" />
