--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
         </th>
     </tr>
   </table>
+  <p id="mob_class" class="home_p">class Edward_Speer:<br> 
+    &emsp; pronouns = ['he', 'him', 'his']<br>
+    &emsp; origin = "Austin, Tx"<br>
+    &emsp; age = 20<br>
+    &emsp; university = "Caltech"<br>
+    &emsp; degree_plan = ("B.S in Computer Science", "June 2025")<br>
+    &emsp; interests = ["Firmware/Software Engineering",
+    "Software Design",
+    "Robotics and Mechatronics",
+    "Control Systems",
+    "Embedded Systems"]<br>
+    &emsp; hobbies = {"sports": ["College Baseball"],
+    "Instruments": ["Guitar", "Piano", "Bass"]}<br>
+</p>
   <script src="hello_world.js"></script>
   <div id="top_accent"></div>
   <div id="top_bar">
