--- a/resume.html
+++ b/resume.html
@@ -29,6 +29,7 @@
     <div id="pages">
       <a href="index.html"> Home</a>
       <a href="resume.html"> Resume</a>
+      <a href="feed.html">Feed</a>
     </div>
     <div id="contact">
       <div id="icons">
