--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
       <h2> Computer Science Student at Caltech</h2>
     </div>
     <div id="pages">
-      <a href="index.html"> Home</a>
-      <a href="resume.html"> Resume</a>
+      <a href="index.html">Home</a>
+      <a href="resume.html">Resume</a>
+      <a href="feed.html">Feed</a>
     </div>
     <div id="contact">
       <div id="icons">
