--- a/feed.html
+++ b/feed.html
@@ -27,6 +27,7 @@
       <a href="index.html"> Home</a>
       <a href="resume.html"> Resume</a>
       <a href="feed.html">Feed</a>
+      <a href="game.html">Play A Game!</a>
     </div>
     <div id="contact">
       <div id="icons">
