Add Game of Life

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
   <script src="hello_world.js"></script>
   <div id="top_accent"></div>
   <div id="top_bar">
+    <style>
+    canvas {
+        display: block;
+        background-color: #000000;
+      }
+    </style>
+    <canvas id="myCanvas"></canvas>
+    <script src="grid.js"></script>
     <div id="title">
       <h1>Edward Speer</h1>
       <h2> Computer Science Student at Caltech</h2>
