--- a/resume.html
+++ b/resume.html
@@ -16,9 +16,9 @@
 
 <body>
   </div>
-  <a id="D_Resume" href="Speer_Resume_12.27.pdf" download>Download My Resume</a>
+  <a id="D_Resume" href="Speer_resume.pdf" download>Download My Resume</a>
   <div id="res_holder">
-    <img id="res" src="Speer_Resume.png">
+    <img id="res" src="Speer_resume.png">
   </div>
   <div id="top_accent"></div>
   <div id="top_bar">
