--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
   </div>
   <a id="D_Resume" href="Speer_resume.pdf" download>Download My Resume</a>
   <div id="res_holder">
-    <img id="res" src="Speer_resume.png">
+    <img id="res" src="Speer_Resume.png">
   </div>
   <div id="top_accent"></div>
   <div id="top_bar">
